--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=RCDriversTest1
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Voiture/Mini_Jeu_01.Mini_Jeu_01
+GameDefaultMap=/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Voiture/Mini_Jeu_01.Mini_Jeu_01
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
