--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -35,7 +35,7 @@ InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
-bCookAll=False
+bCookAll=True
 bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
@@ -64,14 +64,4 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="Mini_Jeu_01")
-+MapsToCook=(FilePath="Mini_Jeu_02")
-+MapsToCook=(FilePath="Mini_Jeu_03")
-+MapsToCook=(FilePath="Mini_Jeu_04")
-+MapsToCook=(FilePath="Mini_Jeu_05")
-+MapsToCook=(FilePath="Mini_Jeu_06")
-+MapsToCook=(FilePath="Mini_Jeu_07")
-+MapsToCook=(FilePath="Mini_Jeu_08")
-+MapsToCook=(FilePath="Mini_Jeu_09")
-+MapsToCook=(FilePath="ThirdPersonExampleMap")
 
