--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -25,5 +25,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/RCDriversTest1")
 
 [/Script/MagicLeap.MagicLeapSettings]
-bUseMLAudioForZI=False
+bUseMLAudioForZI=True
 
