--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -35,7 +35,7 @@ InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
 LocalizationTargetCatchAllChunkId=0
-bCookAll=True
+bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
@@ -64,4 +64,5 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="Mini_Jeu_01")
 
