--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -64,5 +64,5 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="Mini_Jeu_01")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Voiture/Mini_Jeu_01")
 
