--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -65,4 +65,12 @@ bSkipMovies=False
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Voiture/Mini_Jeu_01")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Voiture/Mini_Jeu_02")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Voiture/Mini_Jeu_03")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Bateau/Mini_Jeu_04")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Bateau/Mini_Jeu_05")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Bateau/Mini_Jeu_06")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Avion/Mini_Jeu_07")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Avion/Mini_Jeu_08")
++MapsToCook=(FilePath="/Game/Crazy_Race_Parc/Kellian/Mini_Jeu_Avion/Mini_Jeu_09")
 
